modified restart button

--- a/index.html
+++ b/index.html
@@ -104,12 +104,13 @@ function gameover()
     document.querySelector('#c1').innerText=''
      document.querySelector('#c2').innerText=''
     document.querySelector('#c3').innerText=''
+    display.innerText =''
 }
 function checkDraw() {
     if((display.innerText !== 'player 1 won')||(display.innerText !=='player 2 won') ){
         if((document.querySelector('#a1').innerText !=='') && (document.querySelector('#a2').innerText !=='')&& (document.querySelector('#a3').innerText !=='') &&(document.querySelector('#b1').innerText !=='') && (document.querySelector('#b2').innerText !=='')&& ( document.querySelector('#b3').innerText!=='')&& ( document.querySelector('#c1').innerText !=='') && (document.querySelector('#c2').innerText !=='') &&(document.querySelector('#c3').innerText !=='')) {
             display.innerText ="It's a draw"
-            gameover()
+            
 
         }
           
